core-v2(batch-4): keep native command store set compatible with API 26